WikiaMobile: exanding categories triggered additional scrollbar (BugId:17771)
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@46239 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/extensions/wikia/WikiaMobile/css/categories.scss
+++ b/extensions/wikia/WikiaMobile/css/categories.scss
@@ -19,6 +19,6 @@
 	}
 
 	#mw-normal-catlinks span{
-		padding: 5px;
+		padding: 0 5px;
 	}
 }
